--- a/assets/style/scss/_main.scss
+++ b/assets/style/scss/_main.scss
@@ -3733,6 +3733,10 @@ $breadcrumb-divider: quote(">");
 
     .content {
       padding: 40px 0;
+
+      .oxford-tl {
+        display: block !important;
+      }
     }
 
     .breadcrumb {
